--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,7 @@
     <string name="total_time">03:07</string>
     <string name="imgdes">imgDes</string>
     <string name="choose_reader">اختر القارئ</string>
+    <string name="Ammer">عامر الكاظمي</string>
+    <string name="Mohammed">محمد صديق المنشاوي</string>
+    <string name="Mahomood">محمود الحصيري</string>
 </resources>
